# parprog_labs

./: .gitignore
lb1/: CMakeLists.txt
lb1/src/: io_image.c  io_image.h  main.c
lb2/openmpc/: CMakeLists.txt
lb2/openmpc/src/: io_image.c  io_image.h  main.c
lb2/stdthreadscpp/: CMakeLists.txt
lb2/stdthreadscpp/src/: main.cpp  utils.cpp  utils.hpp
lb3/copencl/: CMakeLists.txt  ReadMe.md
lb3/copencl/kernel/: conv_resize.cl
lb3/copencl/src/: io_image.c  io_image.h  main.c  types.h
lb3/cppcuda/: CMakeLists.txt
lb3/cppcuda/kernels/: kernels.cu  kernels.h
lb3/cppcuda/results/: Results.md
lb3/cppcuda/src/: main.cpp
lb4/: .python-version  check_gil.py  main.py  requiremets.txt  top_words_boevik.txt  top_words_boevik_stemmed.txt  top_words_drama.txt  top_words_drama_stemmed.txt  top_words_komedija.txt  top_words_komedija_stemmed.txt  utils.py  worker.py
lb5/: taskA.py  taskB.py  utilsA.py  utilsB.py
